fix weil tom hat kaputt gemacht

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Simple but powerful study-assistance while browsing. Get definitions for whatever word you want within seconds, summarize up to 1000 words effortlessly, summarize text even more compact, turn text into bullet points and get text-answers to even complex problems. Try in demo and explore all of our functions to make your life easier!">
     <meta name="keywords" content="StudyMateAI, Tutorial Download, 6 Different Study Functions, Definitions, Summarize, Flashcards, Text-answers, Try in Demo">
   <title>studym8ai.app</title>
-  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
+  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -24,7 +24,7 @@
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.png">
+                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.webp">
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -162,7 +162,7 @@
         <div class="col px-4 pt-5 my-5 text-center">
             <h3><p><b> Too lazy to perpare for your exercise-session?
             <br>We have you covered!</b></p></h3>
-            <img src="pngs/studym8 excercise example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" >
+            <img src="pngs/studym8 excercise example.webp" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" >
             <hr>
         </div>
     </div>
@@ -171,7 +171,7 @@
         <div class="col px-4 pt-5 my-5 text-center">
             <h3><p> <b> StudyMateAI may be desgined to help you study
             <br> but you can use it for almost anything!</b></p></h3> 
-            <img src="pngs/studym8 creative question example.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:30%;">
+            <img src="pngs/studym8 creative question example.webp" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:30%;">
           <hr>
         </div>
     </div>
@@ -179,7 +179,7 @@
     <div class="row">
         <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> Too lazy to read all of that?</b></p></h3>
-          <img src="pngs/studym8 too lazy to read all that.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" >
+          <img src="pngs/studym8 too lazy to read all that.webp" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" >
           <hr>
         </div>
     </div>
@@ -191,11 +191,11 @@
         </div>
         <div class="col px-4 pt-5 my-5 text-center">
           <h3><p> <b> Explore all of our functions <br> to make your life easier!</b></p></h3>
-          <img src="pngs/studym8 explore our functions.png" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:60%;" >
+          <img src="pngs/studym8 explore our functions.webp" class="image-fluid image-border img_autofit shadow-lg mb-4" loading="lazy" style="max-width:60%;" >
         </div>
     </div>
 
-<img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
+<img class="icon" src=pngs\StudyMateAI-Logo.webp width="50" height="50" >
 <div class="mouse-icon">
   <i class="fa fa-mouse-pointer"></i>
 </div>
