--- a/on_install.html
+++ b/on_install.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>studym8ai.app/on_install</title>
-  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
+  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -21,7 +21,7 @@
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.png">
+                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.webp">
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -80,7 +80,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 1.png" alt="" loading="lazy" style="width: 30%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 1.webp" alt="" loading="lazy" style="width: 30%;">
       </a>
     </div>
     <div class="col-md-5 text-c">
@@ -97,7 +97,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 2.png" alt="" loading="lazy" style="width: 30%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 2.webp" alt="" loading="lazy" style="width: 30%;">
       </a>
     </div>
     <div class="col-md-5">
@@ -118,7 +118,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 4.png" alt="" loading="lazy" style="width: 50%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 4.webp" alt="" loading="lazy" style="width: 50%;">
       </a>
     </div>
     <div class="col-md-5">
@@ -137,7 +137,7 @@
   <div class="row">
     <div class="col-md-7 text-center">
       <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 5.png" alt="" loading="lazy" style="width: 30%;">
+        <img class="img-fluid rounded mb-3 mb-md-0 image-border-light" src="pngs/How to start 5.webp" alt="" loading="lazy" style="width: 30%;">
       </a>
     </div>
     <div class="col-md-5">
@@ -153,7 +153,7 @@
   <hr>
 
 
-<img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50">
+<img class="icon" src=pngs\StudyMateAI-Logo.webp width="50" height="50">
 <div class="mouse-icon">
   <i class="fa fa-mouse-pointer"></i>
 </div>
