--- a/tutorial.html
+++ b/tutorial.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>studym8ai.app/tutorial</title>
-  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
+  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -21,7 +21,7 @@
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.png">
+                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.webp">
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -73,7 +73,7 @@
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="definition">Definition</h3>
                   <div class="mb-2">
-                      <img src="pngs/define-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Fast and Simple explanations</code>
+                      <img src="pngs/define-icon.webp" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Fast and Simple explanations</code>
                   </div>
                   <p class="text-muted">This feature explains the meaning of a word, phrase, or concept. It provides a clear and concise explanation of what something is or means, and helps to establish a common understanding of the term being defined. To get the definition of the selected text follow these simple steps: <br><br>
                       &emsp;1. Select the word you want further explanation on.<br>&emsp;&emsp;This could be a single word, a phrase or the name of a concept.<br><br>
@@ -142,7 +142,7 @@ As machines become increasingly capable, tasks considered to require 'intelligen
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="summarize">Summarize</h3>
                   <div class="mb-2">
-                      <img src="pngs/summarize-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Make complex text comprehensive</code>
+                      <img src="pngs/summarize-icon.webp" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Make complex text comprehensive</code>
                   </div>
                   <p class="text-muted">This feature provides you with a concise and clear understanding of the key points or main ideas of the original text. You can choose between a longer version, which will tend to paraphrase shorter texts or reduce the input to its fundamentals.<br><br>
                       &emsp;1. Select the text you want to (short) summarize.<br>&emsp;&emsp;Please note that we can currently handle requests with a <strong>maximum of 1000 words</strong>.<br><br>
@@ -170,7 +170,7 @@ The history of P. peruviana cultivation in South America can be traced to the In
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="bulletpoints">Bulletpoints</h3>
                   <div class="mb-2">
-                      <img src="pngs/summarizebullets-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Ready to use in presentations and summaries</code>
+                      <img src="pngs/summarizebullets-icon.webp" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Ready to use in presentations and summaries</code>
                   </div>
                   <p class="text-muted">Bullet points are a type of formatting used to present information in a concise and organized way. They are typically used to highlight key points or important information in a list format.<br><br>
                       &emsp;1. Select the text you want to summarize in bulletpoints.<br>&emsp;&emsp;Please note that we can currently handle requests with a <strong>maximum of 1000 words</strong>.<br><br>
@@ -222,7 +222,7 @@ The history of P. peruviana cultivation in South America can be traced to the In
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="question">Answer Question</h3>
                   <div class="mb-2">
-                      <img src="pngs/answerquestion-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Answer practise questions or enter your own prompts</code>
+                      <img src="pngs/answerquestion-icon.webp" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Answer practise questions or enter your own prompts</code>
                   </div>
                   This feature can be used in different ways, try to enter your own questions into the intput field. The 'Answer Question' option is sort of a wildcard, but to use its main function follow these steps:<br><br>
                   <p class="text-muted">&emsp;1. Select the question you want the answer to.<br><br>
@@ -265,7 +265,7 @@ With Singapore's strategic location being a favourable destination for high dema
               <div class="col-md-6 mb-4 mb-md-0">
                   <h3 class="fw-bold" id="flashcards">Create Flashcards</h3>
                   <div class="mb-2">
-                      <img src="pngs/flashcard-icon.png" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Prepare your next study session</code>
+                      <img src="pngs/flashcard-icon.webp" alt="" srcset="" style="width: 3rem; padding-right: 0.5rem;"><code>Prepare your next study session</code>
                   </div>
                   <p class="text-muted">Flashcards can be a simple but effective way to improve memory and retention of information. They typically consist of a set of cards, with a question or prompt on one side and an answer on the other side. To extract the essential features from any text and prepare some flashcards, follow these steps: <br><br>
                       &emsp;1. Select the text you want flashcards of.<br><br>
@@ -294,7 +294,7 @@ With Singapore's strategic location being a favourable destination for high dema
                       &emsp;1. Open StudyMateAI via the magic sidebar (see the icon in the bottom left/right? Try to hover over it with your mouse). <strong>Tipp:</strong> The position can be changed in the settings.<br><br>
                       &emsp;2. Open the StudyMateAI popup (default shortcut: <code>Ctrl+Shift+8</code>). <strong>Tipp:</strong> Try the shortcut when its minimized.<br><br>
                       &emsp;3. Access StudyMateAI via your browsers extensions menu at the top right. Maybe you already spottet our icon? In Chrome, click the small puzzle piece and then StudyMateAI.<br>&emsp;&emsp;<strong>Tipp:</strong> Use the pin icon next to our extension to create a shortcut in the top right.<br>
-                      <img class="icon" src=pngs\StudyMateAI-Logo.png width="50" height="50" >
+                      <img class="icon" src=pngs\StudyMateAI-Logo.webp width="50" height="50" >
                       <div class="mouse-icon">
                           <i class="fa fa-mouse-pointer"></i>
                       </div>
