--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>studym8ai.app/download</title>
-    <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
+    <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
     <!-- Link to Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.png">
+                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.webp">
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-          <img class="rounded-lg-3 image-border-light" src="pngs/studym8 explore our functions.png" alt="" width="405">
+          <img class="rounded-lg-3 image-border-light" src="pngs/studym8 explore our functions.webp" alt="" width="405">
       </div>
     </div>
   </div>
@@ -79,7 +79,7 @@
             "        </div>\n" +
             "      </div>\n" +
             "      <div class=\"col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg\">\n" +
-            "          <img class=\"rounded-lg-3 image-border-light\" src=\"pngs/studym8 explore our functions.png\" alt=\"\" width=\"405\">\n" +
+            "          <img class=\"rounded-lg-3 image-border-light\" src=\"pngs/studym8 explore our functions.webp\" alt=\"\" width=\"405\">\n" +
             "      </div>\n" +
             "    </div>\n" +
             "  </div>");
