--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>studym8ai.app/privacy_policy_app</title>
-  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.png"/>
+  <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <nav class="container" role="navigation">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.png">
+                <img class="bi me-2" width="40" height="40" role="img" aria-label="StudyM8Ai" src="pngs/StudyMateAI-Logo.webp">
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -58,7 +58,7 @@
     <div class="row">
         <div class="col">
             <div class="px-4 py-5 my-5 text-center">
-                <img class="d-block mx-auto mb-4" src="pngs/StudyMateAI-Logo.png" alt="" width="72" height="72">
+                <img class="d-block mx-auto mb-4" src="pngs/StudyMateAI-Logo.webp" alt="" width="72" height="72">
                 <h1 class="display-5 fw-bold">Privacy and Pricing</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class="lead mb-4">
