--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -57,7 +57,7 @@
             <hr>
         </header>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('pngs/network-6511448_1920.jpg'); background-size: cover; color: white; max-height: 40rem;">
+        <header class="masthead" style="background-image: url('pngs/network-6511448_1920.webp'); background-size: cover; color: white; max-height: 40rem;">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
