--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="overflow-hidden" style="max-height: 100vh;">
       <div class="container px-5">
-        <img src="/gifs/Simple Product Demonstration.gif" class="img-fluid  shadow-lg mb-4 image-border" alt="Example image" loading="lazy" width="90%" height="">
+        <iframe src="https://www.youtube.com/watch?v=VZEctTZk4j4" controls="0" autoplay="1" loop="1" class="img-fluid  shadow-lg mb-4 image-border" alt="Demonstration Video" loading="lazy" width="90%" height="">
       </div>
       <hr>
     </div>
