SEO: added meta tags

--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -5,10 +5,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="Gian Hofmann and Tom Sommerfeld, ChatGPT" />
-        <meta name="keywords" content="StudyMateAI, Gian, Tom, education, learning, Artificial Intelligence (AI), Education, Browser extension, Davinci-3 model, OpenAI, Text summarization, Definitions, Bullet points, Flashcards, Study exercises">
-        <title>Chat GPT & StudyMateAI</title>
+        <meta name="keywords" content="Artificial Intelligence (AI), Education, StudyMateAI, Browser extension, Davinci-3 model, OpenAI, Text summarization, Definitions, Bullet points, Flashcards, Study exercises, Expert Opinion, Quillbot, ChatGPT, Anki, Personalized learning, Automated assessment, Intelligent tutoring">
+        <meta name="description" content="StudyMateAI is an innovative browser extension that utilizes the cutting-edge Davinci-3 model of OpenAI to enhance the study experience. It offers a variety of features that can save students time and effort, while also helping them to better understand and retain information.">
+        <meta name="author" content="Chat GPT & Gian Hofmann">
+        <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
+        <meta name="robots" content="index, follow"><title>Chat GPT & StudyMateAI</title>
         <link rel="icon" type="image/x-icon" href="pngs/StudyMateAI-Logo.webp" />
         <!-- Link to Font Awesome library -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
