--- a/impressum.html
+++ b/impressum.html
@@ -1,3 +1,7 @@
+<meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
+<meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
+<html>
+
 <h1>Impressum</h1>
 
 <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
@@ -10,3 +14,4 @@ Zwingerweg 3<br />
 E-Mail: studym8ai@gmail.com</p>
 
 <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+</html>
