--- a/download.html
+++ b/download.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>studym8ai.app/download</title>
+    <meta name="description" content="Download StudyMateAI for Chrome/Edge/Opera to summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model."/>
+    <meta name="keywords" content="StudyMateAI, Chrome/Edge/Opera, summarizing texts, flashcards, definitions, language processing model"/>
+    <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
+    <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
+    <title>Download Studym8AI</title>
     <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
     <!-- Link to Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
