--- a/how_is_this_free.html
+++ b/how_is_this_free.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
+    <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
   <title>studym8ai.app/how_is_this_free</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
