--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>studym8ai.app/privacy_policy_app</title>
+    <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
+    <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
+    <meta name="description" content="StudyMateAI is an addon/extension designed to assist you in your studies. We take your privacy and data protection seriously and do not collect or share any user data. We partner with OpenAI to provide the underlying technology for our text generation service. Sign up for a free 3-month trial with OpenAI, and support us via Buymeacoffee.">
+    <meta name="keywords" content="StudyMateAI, addon/extension, privacy, data protection, OpenAI, text generation service, free trial, Buymeacoffee">
+  <title>How is this free?</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
