--- a/tutorial.html
+++ b/tutorial.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>studym8ai.app/tutorial</title>
+    <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
+    <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
+    <meta name="keywords" content="StudyMateAI, home, download, tutorial, free, about, how to use, features, definition, send request, fast, simple explanation, summary, bulletpoints, answer question, flashcards, extension, installed, blog, privacy policy, impressum">
+    <meta name="description" content="StudyMateAI is a tool to help you understand and remember complex texts. Learn more about our features such as Definition, Short Summary, Create Bulletpoints, Answer Question and Create Flashcards. Download our extension and start studying smarter today.">
+  <title>Tutorial StudyM8AI</title>
   <link rel="icon" type="image/png" href="pngs/StudyMateAI-Logo.webp"/>
   <!-- Link to Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
