playlist for loop

--- a/on_install.html
+++ b/on_install.html
@@ -64,7 +64,7 @@
     </div>
     <div class="container px-5">
         <div class="ratio ratio-16x9">
-          <iframe src="https://www.youtube.com/embed/VZEctTZk4j4?autoplay=1&mute=1&loop=1&controls=0" class="shadow-lg mb-4 image-border" alt="Demonstration Video"></iframe>
+          <iframe src="https://www.youtube.com/embed/VZEctTZk4j4?playlist=VZEctTZk4j4&autoplay=1&mute=1&loop=1&controls=0" class="shadow-lg mb-4 image-border" alt="Demonstration Video"></iframe>
         </div>
         <hr>
       </div>
