--- a/impressum.html
+++ b/impressum.html
@@ -1,3 +1,12 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W2ZHWQH5DZ"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W2ZHWQH5DZ');
+</script>
 <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
 <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
 <html>
