--- a/on_install.html
+++ b/on_install.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2ZHWQH5DZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W2ZHWQH5DZ');
+    </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
     <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
