Added google tag manager

--- a/chat_gpt_introduction_to_studymateai-article.html
+++ b/chat_gpt_introduction_to_studymateai-article.html
@@ -3,6 +3,13 @@
 <!-- https://startbootstrap.com/theme/clean-blog-->
 <!-- https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/dist/post.html-->
     <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-T74Q8KR');</script>
+        <!-- End Google Tag Manager -->
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2ZHWQH5DZ"></script>
         <script>
@@ -32,6 +39,10 @@
         <link rel="stylesheet" href="article.css">
     </head>
     <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T74Q8KR"
+                      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
         <header class="p-3 mb-3">
             <nav class="container" role="navigation">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
