--- a/impressum.html
+++ b/impressum.html
@@ -1,3 +1,12 @@
+<html>
+<head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T74Q8KR');</script>
+<!-- End Google Tag Manager -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2ZHWQH5DZ"></script>
 <script>
@@ -9,8 +18,12 @@
 </script>
 <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
 <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
-<html>
-
+</head>
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T74Q8KR"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <h1>Impressum</h1>
 
 <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
@@ -23,4 +36,5 @@ Zwingerweg 3<br />
 E-Mail: studym8ai@gmail.com</p>
 
 <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+</body>
 </html>
