--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
         gtag('config', 'G-W2ZHWQH5DZ');
     </script>
+    <script type="text/javascript">
+        var _iub = _iub || [];
+        _iub.csConfiguration = {"askConsentAtCookiePolicyUpdate":true,"countryDetection":true,"enableLgpd":true,"enableUspr":true,"floatingPreferencesButtonDisplay":"bottom-right","lang":"en","lgpdAppliesGlobally":false,"perPurposeConsent":true,"reloadOnConsent":true,"whitelabel":false,"cookiePolicyId":95905497,"siteId":3012124, "callback":{ "onConsentGiven":
+                    function(){gtag('consent', 'update', {
+                        'analytics_storage': 'granted'
+                    });},"onConsentRejected": function(){
+                    gtag('consent', 'default', {
+                        'ad_storage': 'denied',
+                        'analytics_storage': 'denied'
+                    });} }, "banner":{ "acceptButtonDisplay":true,"backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"explicitWithdrawal":true,"listPurposes":true,"logo":"https://studym8ai.app/pngs/StudyMateAI-Logo.webp","position":"bottom","rejectButtonDisplay":true,"showPurposesToggles":true }};
+    </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
     <meta name="description" content="Simple but powerful study-assistance while browsing. Get definitions for whatever word you want within seconds, summarize up to 1000 words effortlessly, summarize text even more compact, turn text into bullet points and get text-answers to even complex problems. Try in demo and explore all of our functions to make your life easier!">
