--- a/on_install.html
+++ b/on_install.html
@@ -17,6 +17,17 @@
 
         gtag('config', 'G-W2ZHWQH5DZ');
     </script>
+    <script type="text/javascript">
+        var _iub = _iub || [];
+        _iub.csConfiguration = {"askConsentAtCookiePolicyUpdate":true,"countryDetection":true,"enableLgpd":true,"enableUspr":true,"floatingPreferencesButtonDisplay":"bottom-right","lang":"en","lgpdAppliesGlobally":false,"perPurposeConsent":true,"reloadOnConsent":true,"whitelabel":false,"cookiePolicyId":95905497,"siteId":3012124, "callback":{ "onConsentGiven":
+                    function(){gtag('consent', 'update', {
+                        'analytics_storage': 'granted'
+                    });},"onConsentRejected": function(){
+                    gtag('consent', 'default', {
+                        'ad_storage': 'denied',
+                        'analytics_storage': 'denied'
+                    });} }, "banner":{ "acceptButtonDisplay":true,"backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"explicitWithdrawal":true,"listPurposes":true,"logo":"https://studym8ai.app/pngs/StudyMateAI-Logo.webp","position":"bottom","rejectButtonDisplay":true,"showPurposesToggles":true }};
+    </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
     <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
