provisorisches cookie banner

--- a/how_is_this_free.html
+++ b/how_is_this_free.html
@@ -16,6 +16,9 @@
         gtag('js', new Date());
 
         gtag('config', 'G-W2ZHWQH5DZ');
+        gtag('consent', 'default', {
+            'analytics_storage': 'granted'
+        });
     </script>
 
     <script type="text/javascript">
@@ -24,7 +27,7 @@
                     function(){gtag('consent', 'update', {
                         'analytics_storage': 'granted'
                     });},"onConsentRejected": function(){
-                    gtag('consent', 'default', {
+                    gtag('consent', 'update', {
                         'ad_storage': 'denied',
                         'analytics_storage': 'denied'
                     });} }, "banner":{ "acceptButtonDisplay":true,"backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"explicitWithdrawal":true,"listPurposes":true,"logo":"https://studym8ai.app/pngs/StudyMateAI-Logo.webp","position":"bottom","rejectButtonDisplay":true,"showPurposesToggles":true }};
@@ -106,10 +109,10 @@
                     <h1 class="display-5 fw-bold">Privacy and Pricing</h1>
                     <div class="col-lg-6 mx-auto">
                         <p class="lead mb-4">
-                            Thank you for your interest in StudyMateAI, an addon/extension designed to assist you in your studies. We take your privacy and data protection seriously and want to assure you that we do not collect or share any user data.
+                            Thank you for your interest in StudyMateAI, an addon/extension designed to assist you in your studies. We take your privacy and data protection seriously and want to assure you that we do not collect or share any user data within our browser extension.
                             We store all the necessary user-information directly in the browsers of our users ensuring that your data remains safe and secure. <BR></BR> <b>We currently do not promote any subscriptions or paid features of our own</b>. We partner with <a class="clean_links"  href="https://openai.com/">OpenAI</a>, a company that provides the underlying technology for our text generation service. In order to use our service, all users are required to create an account with OpenAI to obtain their own API key, which is necessary for using our service. This allows us to ensure that our users have access to the latest and most reliable technology, while also giving us the ability to provide our services for free and improve our service over time. <b>Signing up to OpenAI you get a free 3-month trial</b>😎Don't worry you do not enter a subscription service after the free trial has ended! For details see: <a class="clean_links" href="https://openai.com/api/pricing/">OpenAI Pricing</a>.
-                            <BR></BR> If you enjoy our service, we provide you with the possibility of supporting us via <a class="clean_links" href="https://www.buymeacoffee.com/">Buymeacoffee</a>. Please note, we do not handle any payment information ourselves.
-                            We understand the importance of data protection and privacy, and we want to assure you that we do not collect or share any user data. We appreciate your understanding and look forward to helping you study.  
+                            <BR> If you enjoy our service, we provide you with the possibility of supporting us via <a class="clean_links" href="https://www.buymeacoffee.com/">Buymeacoffee</a>. Please note, we do not handle any payment information ourselves.
+                            We understand the importance of data protection and privacy, and we want to assure you that we do not collect or share any user data other than to analyse the website performance. We appreciate your understanding and look forward to helping you study.
                         
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                             <button type="button" class="btn btn-secondary btn-lg px-4 gap-3" onclick="window.open('https://studym8ai.app/download.html', '_self').focus()">Download</button>
