--- a/on_install.html
+++ b/on_install.html
@@ -16,6 +16,9 @@
         gtag('js', new Date());
 
         gtag('config', 'G-W2ZHWQH5DZ');
+        gtag('consent', 'default', {
+            'analytics_storage': 'granted'
+        });
     </script>
     <script type="text/javascript">
         var _iub = _iub || [];
@@ -23,7 +26,7 @@
                     function(){gtag('consent', 'update', {
                         'analytics_storage': 'granted'
                     });},"onConsentRejected": function(){
-                    gtag('consent', 'default', {
+                    gtag('consent', 'update', {
                         'ad_storage': 'denied',
                         'analytics_storage': 'denied'
                     });} }, "banner":{ "acceptButtonDisplay":true,"backgroundOverlay":true,"closeButtonDisplay":false,"customizeButtonDisplay":true,"explicitWithdrawal":true,"listPurposes":true,"logo":"https://studym8ai.app/pngs/StudyMateAI-Logo.webp","position":"bottom","rejectButtonDisplay":true,"showPurposesToggles":true }};
