--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
     <meta name="description" content="Simple but powerful study-assistance while browsing. Get definitions for whatever word you want within seconds, summarize up to 1000 words effortlessly, summarize text even more compact, turn text into bullet points and get text-answers to even complex problems. Try in demo and explore all of our functions to make your life easier!">
-    <meta name="keywords" content="StudyMateAI, Tutorial Download, 6 Different Study Functions, Definitions, Summarize, Flashcards, Text-answers, Try in Demo">
+    <meta name="keywords" content="StudyMateAI, studym8, studym8, studym8ai, studym8ai.app, Tom Sommerfeld, Gian Andri Hofmann, Tutorial, Download, 6 Different Study Functions, Definitions, Summarize, Flashcards, Text-answers, Try in Demo">
     <meta name="author" content="Gian Hofmann, Tom Sommerfeld"/>
     <meta name="copyright" content="© 2023 Gian Hofmann, Tom Sommerfeld"/>
   <title>studym8ai.app</title>
