--- a/tutorial.html
+++ b/tutorial.html
@@ -16,7 +16,7 @@
         gtag('js', new Date());
         gtag('config', 'G-W2ZHWQH5DZ');
         gtag('consent', 'default', {
-            'analytics_storage': 'granted'
+            'analytics_storage': 'denied'
         });
     </script>
 
