activity tracked only with consent now

--- a/download.html
+++ b/download.html
@@ -93,6 +93,9 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T74Q8KR"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+
 <div class="container my-5">
     <div id="custom-hero-bg" class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg custom-bg-hero-light">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
