--- a/privacy_policy_app.html
+++ b/privacy_policy_app.html
@@ -93,6 +93,9 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T74Q8KR"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+
 <div class="container">
     <div class="row">
         <div class="col">
