added conversion tracker

--- a/download.html
+++ b/download.html
@@ -17,6 +17,7 @@
 
         gtag('config', 'G-W2ZHWQH5DZ');
         gtag('consent', 'default', {
+            'ad_storage': 'denied',
             'analytics_storage': 'denied'
         });
     </script>
@@ -41,6 +42,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <script type="text/javascript">
         var _iub = _iub || [];
         _iub.csConfiguration = {"askConsentAtCookiePolicyUpdate":true,"cookiePolicyInOtherWindow":true,"countryDetection":true,"enableLgpd":true,"enableUspr":true,"floatingPreferencesButtonDisplay":"bottom-right","lang":"de","lgpdAppliesGlobally":false,"perPurposeConsent":true,"reloadOnConsent":true,"siteId":3012124,"whitelabel":false,"cookiePolicyId":90070237,"cookiePolicyUrl":"https://studym8ai.app/how_is_this_free.html","privacyPolicyUrl":"https://studym8ai.app/how_is_this_free.html","privacyPolicyNoticeAtCollectionUrl":"https://studym8ai.app/how_is_this_free.html", "callback":{ "onConsentGiven": function(){gtag('consent', 'update', {
+                    'ad_storage': 'granted',
                     'analytics_storage': 'granted'
                 });},"onConsentRejected":function (){gtag('consent', 'default', {
                     'ad_storage': 'denied',
