--- a/download.html
+++ b/download.html
@@ -119,7 +119,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <h1 class="display-4 fw-bold lh-1">Download StudyMateAI for Chrome/Edge/Opera</h1>
        <p class="lead">Summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model. So if you want to study smarter, not harder, give StudyMateAI a try and see how it can transform the way you learn.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-          <button type="button" class="btn btn-secondary btn-lg px-4 me-md-2 fw-bold" onclick='window.open("https://chrome.google.com/webstore/detail/studymateai/ojdbfphobphdlgloniofafojolaalnlm"); gtag_report_conversion()'>Download</button>
+          <button id="download-btn" type="button" class="btn btn-secondary btn-lg px-4 me-md-2 fw-bold" onclick='window.open("https://chrome.google.com/webstore/detail/studymateai/ojdbfphobphdlgloniofafojolaalnlm"); gtag_report_conversion()'>Download</button>
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
@@ -135,7 +135,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             "        <h1 class=\"display-4 fw-bold lh-1\">Download StudyMateAI for Firefox</h1>\n" +
             "        <p class=\"lead\">Summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model. So if you want to study smarter, not harder, give StudyMateAI a try and see how it can transform the way you learn.</p>\n" +
             "        <div class=\"d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3\">\n" +
-            "          <button type=\"button\" class=\"btn btn-secondary btn-lg px-4 me-md-2 fw-bold\" onclick='gtag_report_conversion()'>Download</button>\n" +
+            "          <button id=\"download-btn\" type=\"button\" class=\"btn btn-secondary btn-lg px-4 me-md-2 fw-bold\" onclick='gtag_report_conversion()'>Download</button>\n" +
             "        </div>\n" +
             "      </div>\n" +
             "      <div class=\"col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg\">\n" +
