--- a/download.html
+++ b/download.html
@@ -131,7 +131,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
 
   <div class="container my-5">
-    <div id="custom-hero-bg" class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg custom-bg-hero-light firefox-only">
+    <div id="custom-hero-bg-1" class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg custom-bg-hero-light firefox-only">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold lh-1">Download StudyMateAI for Firefox</h1>
        <p class="lead">Summarize texts, create flashcards, get definitions explained, and even answer questions, all with the help of an advanced language processing model. So if you want to study smarter, not harder, give StudyMateAI a try and see how it can transform the way you learn.</p>
