--- a/download.html
+++ b/download.html
@@ -31,7 +31,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 }
             };
             gtag('event', 'conversion', {
-                'send_to': 'AW-11108704479/5S9yCPC6w48YEN_BhbEp',
+                'send_to': 'G-W2ZHWQH5DZ',//'AW-11108704479/5S9yCPC6w48YEN_BhbEp',
                 'event_callback': callback
             });
             return false;
